[package]
name = "archive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["AbortController", "ReadableStream"] }
wasm-bindgen-futures = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
log = "0.4"

zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
zstd = { version = "0.11", default-features = false }
xz2 = "0.1"

aes-gcm = "0.10"
argon2 = { version = "0.5", default-features = false }
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
getrandom = { version = "0.2", features = ["js"] }

blake3 = "1.3"
crc32fast = "1.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"