[package]
name = "enc"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] } # Enable derive feature
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]